--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HappyPlaces"
+        android:theme="@style/Theme.HappyPlacesApp"
         tools:targetApi="31">
+        <activity
+            android:name=".Test"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".AddHappyPlaceActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:label="ADD HAPPY PLACE"
             android:theme="@style/CustomNoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
